src/objects/Commission_Profile__c.object
<CustomObject>
    <fields>
        <fullName>ActiveUser__c</fullName>
        <formula>Salesforce_User__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommissionType__c</fullName>
        <label>Commission Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No commission</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Consultancy</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Shared Inside Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_User__c</fullName>
        <formula>Name = $User.FirstName &amp; &apos; &apos; &amp;  $User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FixedCommissionRate__c</fullName>
        <label>Fixed Commission Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GP_Bonus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GP Bonus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Contracts_Signed__c</fullName>
        <label>No of Contracts Signed</label>
        <summaryForeignKey>Contract_Sales_Rep__c.Commission_Profile__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Salesforce_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commission_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SumOfGrossProfit__c</fullName>
        <label>Sum of Gross Profit</label>
        <summarizedField>Contract_Sales_Rep__c.GrossProfitperRep__c</summarizedField>
        <summaryForeignKey>Contract_Sales_Rep__c.Commission_Profile__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_Commissions__c</fullName>
        <label>Sum of Commissions</label>
        <summarizedField>Contract_Sales_Rep__c.Commission__c</summarizedField>
        <summaryForeignKey>Contract_Sales_Rep__c.Commission_Profile__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X2013_Gross_Profit__c</fullName>
        <label>2013 Gross Profit</label>
        <summarizedField>Contract_Sales_Rep__c.GrossProfitperRep__c</summarizedField>
        <summaryFilterItems>
            <field>Contract_Sales_Rep__c.All_Invoices_Paid_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2013 12:00 AM</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Contract_Sales_Rep__c.All_Invoices_Paid_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2013 12:00 AM</value>
        </summaryFilterItems>
        <summaryForeignKey>Contract_Sales_Rep__c.Commission_Profile__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X2014_Gross_Profit__c</fullName>
        <label>2014 Gross Profit</label>
        <summarizedField>Contract_Sales_Rep__c.GrossProfitperRep__c</summarizedField>
        <summaryFilterItems>
            <field>Contract_Sales_Rep__c.All_Invoices_Paid_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2014 12:00 AM</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Contract_Sales_Rep__c.All_Invoices_Paid_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2014 12:00 AM</value>
        </summaryFilterItems>
        <summaryForeignKey>Contract_Sales_Rep__c.Commission_Profile__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X2015_Gross_Profit__c</fullName>
        <label>2015 Gross Profit</label>
        <summarizedField>Contract_Sales_Rep__c.GrossProfitperRep__c</summarizedField>
        <summaryFilterItems>
            <field>Contract_Sales_Rep__c.All_Invoices_Paid_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015 12:00 AM</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Contract_Sales_Rep__c.All_Invoices_Paid_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2015 12:00 AM</value>
        </summaryFilterItems>
        <summaryForeignKey>Contract_Sales_Rep__c.Commission_Profile__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Sales Rep Profile</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sum_of_Commissions__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>SumOfGrossProfit__c</columns>
        <columns>CommissionType__c</columns>
        <columns>FixedCommissionRate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>Finance</group>
            <role>Administration</role>
            <role>CEO</role>
            <role>Finance</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllActiveUsers</fullName>
        <columns>NAME</columns>
        <columns>Sum_of_Commissions__c</columns>
        <columns>SumOfGrossProfit__c</columns>
        <columns>GP_Bonus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ActiveUser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Users</label>
        <sharedTo>
            <group>Finance</group>
            <role>Administration</role>
            <role>CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GP_Bonus</fullName>
        <columns>NAME</columns>
        <columns>ActiveUser__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GP_Bonus__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>GP Bonus</label>
        <sharedTo>
            <group>Finance</group>
            <role>Administration</role>
            <role>CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Bonus</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Bonus</label>
        <sharedTo>
            <group>Sales_Reps</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Sales Rep</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Rep Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>